# celix_web_console

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  deploy.cmake
web_console/: .CMakeLists.txt.swp  CMakeLists.txt  deploy.cmake
web_console/private/include/: web_console.h  web_service_tracker.h
web_console/private/src/: web_console.c  web_service_tracker.c
web_console/www/: index.html
web_console_bundle_service/: CMakeLists.txt
web_console_bundle_service/private/include/: web_console_bundle_service.h
web_console_bundle_service/private/src/: web_console_bundle_activator.c  web_console_bundle_service.c
web_console_bundle_service/www/: bundles.html  bundles.js
web_console_service/public/include/: web_console_service.h
web_console_services_service/: CMakeLists.txt
web_console_services_service/private/include/: web_console_services_service.h
web_console_services_service/private/src/: web_console_services_activator.c  web_console_services_service.c
web_console_services_service/www/: .services.html.swp  services.html
web_console_util/private/include/: web_resources.h
web_console_util/private/src/: web_resources.c
